--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /* 초기화 */
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url("header.css");
 * { -webkit-box-sizing: border-box; box-sizing: border-box; font-size: 16px; }
 
 body { margin: 0; font-family: 'Noto Sans KR', sans-serif; letter-spacing: -.5px; }
@@ -19,7 +20,7 @@ a:visited { color: #333; }
 
 body { background: #DBE7EE; }
 
-.container { position: relative; z-index: 1; max-width: 800px; height: 100%; margin: 0 auto; }
+.container { position: relative; z-index: 1; top: 53px; max-width: 800px; height: 100%; margin: 0 auto; }
 .container > div:first-child { overflow: hidden; border-radius: 0 0 14px 14px; max-width: 800px; height: 200px; }
 .container > div:first-child > img { display: block; width: 100%; height: auto; }
 
