--- a/assets/header.css
+++ b/assets/header.css
@@ -1,9 +1,16 @@
 header { background: #fff; position: fixed; z-index: 2; left: 50%; -webkit-transform: translate(-50%); transform: translate(-50%); display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; padding: 14px; border-bottom: 1px solid #eee; width: 800px; }
 @media (max-width: 800px) { header { width: 100%; } }
 
-aside { background: #fff; height: 100%; width: 200px; position: fixed; z-index: 5; right: 0; }
-aside > i { position: absolute; right: 14px; top: 14px; }
+.aside { display: none; background: #fff; height: 100%; width: 200px; position: fixed; z-index: 5; right: 0; }
+.aside > i { position: absolute; right: 14px; top: 14px; }
+.aside > ul > li { border-top: 1px solid #eee; }
+.aside > ul > li > a { padding: 14px 0 14px 14px; -webkit-transition: .5s; transition: .5s; }
+.aside > ul > li :hover { background: #eee; }
+.aside > ul > :first-child { margin-top: 5rem; }
+.aside > ul > :last-child { border-bottom: 1px solid #eee; }
 
-.asideBg { position: fixed; z-index: 4; left: 0; top: 0; width: 100%; height: 100%; background: #111; opacity: .5; }
+.asideBg { display: none; position: fixed; z-index: 4; left: 0; top: 0; width: 100%; height: 100%; background: #111; opacity: .5; }
+
+.block { display: block; }
 
 /*# sourceMappingURL=header.css.map */
