--- a/assets/header.css
+++ b/assets/header.css
@@ -1,4 +1,4 @@
-header { background: #fff; position: fixed; z-index: 2; left: 50%; -webkit-transform: translate(-50%); transform: translate(-50%); display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; padding: 14px; border-bottom: 1px solid #eee; width: 800px; }
+header { background: #fff; position: fixed; z-index: 2; left: 50%; -webkit-transform: translate(-50%); transform: translate(-50%); display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; padding: 14px; border-bottom: 1px solid #eee; width: 800px; }
 @media (max-width: 800px) { header { width: 100%; } }
 
 .aside { display: none; background: #fff; height: 100%; width: 200px; position: fixed; z-index: 5; right: 0; }
