--- a/assets/sub.scss
+++ b/assets/sub.scss
@@ -14,8 +14,10 @@ a {text-decoration: none; display: block;} a:hover {color:var(--main)} a:visited
 body {
     background: #eee;
 }
+@import url('header.css');
 .container {
     position: relative; z-index: 1;
+    top: 53px;
     max-width: 800px;
     height: 100%;
     margin: 0 auto;
@@ -141,13 +143,13 @@ body {
     }
     border-radius: 8px;
     background: #fff;
-    
+
     > article {
         padding: 14px 24px;
         position: relative;
         > section {
             margin-top: 44px;
-            > i { 
+            > i {
                 display: block;
                 position: absolute;
                 right: 24px; top: 20px;
