--- a/assets/company.css
+++ b/assets/company.css
@@ -1,9 +1,31 @@
 @import url("header.css");
 body { background: #f5f5f5; }
 
+h1 { font-weight: 500; font-size: 18px; }
+
+h2 { display: inline-block; font-weight: 300; font-size: 16px; }
+
 .container { position: relative; z-index: 1; top: 83px; max-width: 800px; height: 100%; margin: 0 auto; }
+
+strong { font-weight: 500; }
+
+hr { border: none; height: 1px; background: #ccc; margin: 14px 0; }
 
 .select { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 .select > select { cursor: pointer; color: #aaa; border: none; border-radius: 8px; display: block; width: 90%; padding: 14px 4px; }
+
+.co_wrapper { margin: 24px 0; width: 90%; position: relative; left: 50%; -webkit-transform: translate(-50%); transform: translate(-50%); }
+.co_wrapper > article { padding: 1.4rem; background: #fff; margin-bottom: 8px; border-radius: 8px; }
+.co_wrapper > article > .titleBar, .co_wrapper > article > .toggleBar { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
+.co_wrapper > article > h2 { display: block; }
+.co_wrapper > article > .content { padding: 18px 0 0; }
+.co_wrapper > article > .content > .tabBtn { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
+.co_wrapper > article > .content > .tabBtn > button { width: 33.33%; border: none; padding: 8px 0; border-radius: 4px; cursor: pointer; font-weight: 500; }
+.co_wrapper > article > .content > .tabBtn :not(:last-child) { margin-right: 10px; }
+.co_wrapper > article > .content > .tabBtn :nth-child(1) { background: #FFDFDF; color: #FF6464; }
+.co_wrapper > article > .content > .tabBtn :nth-child(2) { background: #DEE7FF; color: #648FFF; }
+.co_wrapper > article > .content > .tabBtn :nth-child(3) { background: #F3EFFF; color: #8C64FF; }
+.co_wrapper > article > .content section article { background: #eee; margin: 24px 0; padding: 18px; }
+.co_wrapper > article > .content :nth-child(3) > button { border: none; width: 100%; padding: 12px 24px; color: #fff; background: #648FFF; border-radius: 4px; cursor: pointer; }
 
 /*# sourceMappingURL=company.css.map */
