--- a/assets/company.scss
+++ b/assets/company.scss
@@ -2,6 +2,8 @@
 body {
   background: #f5f5f5;
 }
+h1 {font-weight: 500;font-size: 18px;}
+h2 {display: inline-block; font-weight: 300; font-size: 16px;}
 .container {
     position: relative; z-index: 1;
     top: 83px;
@@ -9,6 +11,8 @@ body {
     height: 100%;
     margin: 0 auto;
 }
+strong {font-weight: 500;}
+hr {border: none; height: 1px;background: #ccc; margin: 14px 0;}
 .select {
   display: flex;
   justify-content: center;
@@ -21,4 +25,72 @@ body {
       width: 90%;
       padding: 14px 4px;
     }
+}
+.co_wrapper {
+  margin: 24px 0;
+  width: 90%;
+  position: relative;
+  left: 50%; transform: translate(-50%);
+  > article {
+    padding: 1.4rem;
+    background: #fff;
+    margin-bottom: 8px;
+    border-radius: 8px;
+  }
+  > article {
+    > .titleBar, > .toggleBar {
+      display: flex;
+      justify-content: space-between;
+    }
+    > h2 {display: block;}
+    > .content {
+      // display: none;
+      padding: 18px 0 0;
+      > .tabBtn {
+        display: flex;
+        justify-content: space-between;
+        > button {
+          width: 33.33%;
+          border: none;
+          padding: 8px 0;
+          border-radius: 4px;
+          cursor: pointer;
+          font-weight: 500;
+        }
+        :not(:last-child) {
+          margin-right: 10px;
+        }
+        :nth-child(1) {
+          background: #FFDFDF;
+          color: #FF6464;
+        }
+        :nth-child(2) {
+          background: #DEE7FF;
+          color: #648FFF;
+        }
+        :nth-child(3) {
+          background: #F3EFFF;
+          color: #8C64FF;
+        }
+      }
+      section {
+        article {
+          background: #eee;
+          margin: 24px 0;
+          padding: 18px;
+        }
+      }
+      :nth-child(3) {
+        > button {
+          border: none;
+          width: 100%;
+          padding: 12px 24px;
+          color: #fff;
+          background: #648FFF;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
 }
