--- a/assets/company.scss
+++ b/assets/company.scss
@@ -94,3 +94,7 @@ hr {border: none; height: 1px;background: #ccc; margin: 14px 0;}
     }
   }
 }
+footer {
+  height: 4rem;
+  margin-bottom: 4rem;
+}
