--- a/assets/company.scss
+++ b/assets/company.scss
@@ -18,7 +18,7 @@ hr {border: none; height: 1px;background: #ccc; margin: 14px 0;}
   justify-content: center;
   > select {
     cursor: pointer;
-      color: #aaa;
+      color: #333;
       border: none;
       border-radius: 8px;
       display: block;
