--- a/assets/company.scss
+++ b/assets/company.scss
@@ -17,7 +17,7 @@ hr {border: none; height: 1px;background: #ccc; margin: 14px 0;}
   display: flex;
   justify-content: center;
   > select {
-    background: #555;
+    background: Slateblue;
       cursor: pointer;
       color: #fff;
       border: none;
