--- a/assets/header.scss
+++ b/assets/header.scss
@@ -12,14 +12,17 @@ header {
       width: 100%;
    }
 }
-
+.moveLeft-class {
+   transform: translateX(-200px);
+}
 .aside {
-   display: none;
+   // display: none;
    background: #fff;
    height: 100%;
    width: 200px;
    position: fixed; z-index: 5;
-   right: 0;
+   right: -200px;
+   transition: transform .5s ease-in-out;
    > i {
       position: absolute;right: 14px; top: 14px;
    }
@@ -50,6 +53,7 @@ header {
    width: 100%; height: 100%;
    background: #111;
    opacity: .5;
+   transition: transform 1s ease-in-out;
 }
 
 .block {
