--- a/assets/header.css
+++ b/assets/header.css
@@ -3,7 +3,7 @@ header { background: #fff; position: fixed; z-index: 2; left: 50%; -webkit-trans
 
 .moveLeft-class { -webkit-transform: translateX(-200px); transform: translateX(-200px); }
 
-.aside { background: #fff; height: 100%; width: 200px; position: fixed; z-index: 5; right: -200px; -webkit-transition: -webkit-transform .5s ease-in-out; transition: -webkit-transform .5s ease-in-out; transition: transform .5s ease-in-out; transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out; }
+.aside { background: #fff; height: 100%; width: 200px; position: fixed; z-index: 5; right: -200px; -webkit-transition: -webkit-transform .4s ease-in-out; transition: -webkit-transform .4s ease-in-out; transition: transform .4s ease-in-out; transition: transform .4s ease-in-out, -webkit-transform .4s ease-in-out; }
 .aside > i { position: absolute; right: 14px; top: 14px; }
 .aside > ul > li { border-top: 1px solid #eee; }
 .aside > ul > li > a { padding: 14px 0 14px 14px; -webkit-transition: .5s; transition: .5s; }
@@ -11,7 +11,7 @@ header { background: #fff; position: fixed; z-index: 2; left: 50%; -webkit-trans
 .aside > ul > :first-child { margin-top: 5rem; }
 .aside > ul > :last-child { border-bottom: 1px solid #eee; }
 
-.asideBg { display: none; position: fixed; z-index: 4; left: 0; top: 0; width: 100%; height: 100%; background: #111; opacity: .5; -webkit-transition: -webkit-transform 1s ease-in-out; transition: -webkit-transform 1s ease-in-out; transition: transform 1s ease-in-out; transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out; }
+.asideBg { display: none; position: fixed; z-index: 4; left: 0; top: 0; width: 100%; height: 100%; background: #111; opacity: .5; -webkit-transition: -webkit-transform 1s ease-in-out; transition: -webkit-transform 1s ease-in-out; transition: transform 1s ease-in-out; transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out; -webkit-transition-delay: 2s; transition-delay: 2s; }
 
 .block { display: block; }
 
