--- a/assets/header.css
+++ b/assets/header.css
@@ -11,8 +11,6 @@ header { background: #fff; position: fixed; z-index: 2; left: 50%; -webkit-trans
 .aside > ul > :first-child { margin-top: 5rem; }
 .aside > ul > :last-child { border-bottom: 1px solid #eee; }
 
-.asideBg { display: none; position: fixed; z-index: 4; left: 0; top: 0; width: 100%; height: 100%; background: #111; opacity: .5; -webkit-transition: -webkit-transform 1s ease-in-out; transition: -webkit-transform 1s ease-in-out; transition: transform 1s ease-in-out; transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out; -webkit-transition-delay: 2s; transition-delay: 2s; }
-
-.block { display: block; }
+.asideBg { display: none; position: fixed; z-index: 4; left: 0; top: 0; width: 100%; height: 100%; background: #111; opacity: .5; -webkit-transition-delay: 2s; transition-delay: 2s; }
 
 /*# sourceMappingURL=header.css.map */
