--- a/assets/company.css
+++ b/assets/company.css
@@ -1,5 +1,5 @@
 @import url("header.css");
-body { background: #f5f5f5; }
+body { background: #E6E4F0; }
 
 h1 { font-weight: 500; font-size: 18px; }
 
@@ -16,6 +16,7 @@ hr { border: none; height: 1px; background: #ccc; margin: 14px 0; }
 
 .co_wrapper { margin: 24px 0; width: 90%; position: relative; left: 50%; -webkit-transform: translate(-50%); transform: translate(-50%); }
 .co_wrapper > article { padding: 1.4rem; background: #fff; margin-bottom: 8px; border-radius: 8px; }
+.co_wrapper > article > .titleBar > span > a > i { color: Slateblue; }
 .co_wrapper > article > .titleBar, .co_wrapper > article > .toggleBar { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 .co_wrapper > article > h2 { display: block; }
 .co_wrapper > article > .content { padding: 18px 0 0; }
