--- a/assets/company.scss
+++ b/assets/company.scss
@@ -1,6 +1,6 @@
 @import url('header.css');
 body {
-  background: #f5f5f5;
+  background: #E6E4F0;
 }
 h1 {font-weight: 500;font-size: 18px;}
 h2 {display: inline-block; font-weight: 300; font-size: 16px;}
@@ -39,6 +39,9 @@ hr {border: none; height: 1px;background: #ccc; margin: 14px 0;}
     border-radius: 8px;
   }
   > article {
+    > .titleBar {
+        > span >a> i { color: Slateblue;}
+    }
     > .titleBar, > .toggleBar {
       display: flex;
       justify-content: space-between;
