--- a/assets/company-info.scss
+++ b/assets/company-info.scss
@@ -95,3 +95,14 @@
   width: 100%;
   border: 1px solid #ccc;
 }
+
+button {
+  width: 100%;
+  height: 40px;
+  background: #6A5ACD;
+  border: none;
+  color: #fff;
+  border-radius: 8px;
+  margin-top: 24px;
+  cursor: pointer;
+}
