--- a/assets/slide/style.css
+++ b/assets/slide/style.css
@@ -10,12 +10,13 @@ body{
   white-space: nowrap;
   overflow: hidden;
   position: relative;
+  border-radius: 8px;
+  margin-top: 1.4rem;
 }
 @media (max-width:480px){
   .carousel {
     width: 100%;
-    height: 250px;
-    background-color: green;
+    height: 200px;
     white-space: nowrap;
     overflow: hidden;
     position: relative;
@@ -38,13 +39,13 @@ body{
   align-items: center;
 }
 .slide1 {
-  background: #555;
+  background: #eee;
 }
 .slide2 {
-  background-color: #444;
+  background-color: #ddd;
 }
 .slide3 {
-  background-color: #333;
+  background-color: #ccc;
 }
 .control-container {
   position: absolute;
@@ -65,10 +66,7 @@ body{
 .prev, .next {
   width: 35px;
   height: 65px;
-  /* background-color: white; */
-  color: #eee;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+  color: #aaa;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,12 +80,10 @@ body{
 .prev {
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
-  border-right: 1px solid #eee;
 }
 .next {
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
-  border-left: 1px solid #eee;
 }
 .prev:hover, .next:hover {
   opacity: 0.8;
