--- a/assets/company-info.css
+++ b/assets/company-info.css
@@ -35,7 +35,7 @@ button { width: 100%; height: 40px; background: #6A5ACD; border: none; color: #f
 .co_tabContent table tr td:nth-child(2) { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
 .co_tabContent table tr td:last-child { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; border-right: none; }
 
-.popup { padding: 2rem; border-radius: 8px; width: 96%; position: fixed; z-index: 10; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); height: 98%; background: #fff; }
+.popup { overflow-y: auto; padding: 2rem; border-radius: 8px; width: 96%; position: fixed; z-index: 10; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); height: 98%; background: #fff; }
 .popup select, .popup table, .popup textarea, .popup input { width: 100%; }
 .popup > button { width: auto; margin: 0; padding: 0; background: none; position: absolute; right: 10px; top: 10px; }
 .popup > button > i { color: #888; font-size: 1.4rem; }
