--- a/assets/company-info.css
+++ b/assets/company-info.css
@@ -36,9 +36,22 @@ button { width: 100%; height: 40px; background: #6A5ACD; border: none; color: #f
 .co_tabContent table tr td:last-child { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; border-right: none; }
 
 .popup { overflow-y: auto; padding: 2rem; border-radius: 8px; width: 96%; position: fixed; z-index: 10; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); height: 98%; background: #fff; }
-.popup select, .popup table, .popup textarea, .popup input { width: 100%; }
+@media (min-width: 800px) { .popup { max-width: 760px; } }
+.popup input, .popup select, .popup table, .popup textarea { width: 100%; height: 40px; }
+.popup h1 { padding: 1rem 0; }
+.popup h2 { padding: 24px 0 14px; }
+.popup select { margin: 6px 0; border-radius: 6px; border: 1px solid #ccc; position: relative; }
 .popup > button { width: auto; margin: 0; padding: 0; background: none; position: absolute; right: 10px; top: 10px; }
 .popup > button > i { color: #888; font-size: 1.4rem; }
+.popup table { border-bottom: 1px solid #ccc; }
+.popup table tr td { width: 20%; border-top: 1px solid #ccc; }
+.popup table tr td input { background: #f5f5f5; border: none; margin: 6px 0; padding-left: 8px; }
+.popup table tr .divsion { width: 1%; }
+.popup table tr td:last-child { border-right: none; }
+.popup table tr .tableTh { text-align: center; }
+.popup textarea { border: 1px solid #ccc; border-radius: 4px; height: 200px; }
+.popup div { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.popup div button:not(:last-child) { margin-right: 8px; background: #aaa; }
 
 .popupBg { position: fixed; left: 0; top: 0; z-index: 9; width: 100%; height: 100%; background: #111; opacity: .5; }
 
