--- a/assets/company-info.scss
+++ b/assets/company-info.scss
@@ -153,29 +153,89 @@ button {
 
 // 팝업
 .popup {
-  overflow-y: auto;
-  select, table, textarea, input {
-    width: 100%;
-  }
-  padding: 2rem;
- border-radius: 8px;
- width: 96%;
- position: fixed;
- z-index: 10;
- top: 50%;
- left: 50%;transform: translate(-50%, -50%);
- height: 98%;
- background: #fff;
- > button {
-   width: auto;
-   margin: 0; padding:0;
-   background: none;
-   position: absolute; right: 10px; top: 10px;
-   > i {
-     color: #888; font-size: 1.4rem;
+overflow-y: auto;
+padding: 2rem;
+border-radius: 8px;
+width: 96%;
+position: fixed;z-index: 10;top: 50%;left: 50%;
+transform: translate(-50%, -50%);
+height: 98%;
+background: #fff;
+@media(min-width:800px) {
+  max-width: 760px;
+}
+
+input,select,table,textarea {
+  width: 100%;  height: 40px;
+}
+// .arrowDown {
+//   position: relative;
+//   > .arrow > i {
+//     position: absolute;
+//     z-index: 20;
+//     top: 6px;
+//     right: 0;
+//     background: #fff;
+//     height: 40px;
+//     width: 40px;
+//     text-align: center;
+//     line-height: 2.5;
+//     border-radius: 0 8px 8px 0;
+//   }
+// }
+h1 {  padding: 1rem 0;}
+h2 {padding: 24px 0 14px;}
+
+select {
+  margin: 6px 0;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  position: relative;
+}
+
+> button {
+  width: auto;  margin: 0;  padding: 0;
+  background: none;
+  position: absolute;  right: 10px;  top: 10px;
+
+  > i {
+    color: #888;
+    font-size: 1.4rem;
+   }
+ }
+ table {
+   border-bottom: 1px solid #ccc;
+   tr {
+     td {
+       width: 20%;
+       border-top: 1px solid #ccc;
+       input {
+         background: #f5f5f5; border: none; margin:6px 0;
+         padding-left: 8px;
+       }
+     }
+     .divsion {
+       width: 1%;
+     }
+     td:last-child {
+       border-right: none;
+     }
+     .tableTh {
+       text-align: center;
+     }
+   }
+
+ }
+ textarea { border: 1px solid #ccc; border-radius: 4px; height: 200px;}
+ div {
+   display: flex;
+   button:not(:last-child) {
+     margin-right: 8px;
+     background: #aaa;
    }
  }
 }
+
 .popupBg {
   position: fixed;
   left: 0;
