--- a/assets/company-info.css
+++ b/assets/company-info.css
@@ -1,191 +1,58 @@
 @import url("company.css");
-button {
-  width: 100%;
-  height: 40px;
-  background: #6A5ACD;
-  border: none;
-  color: #fff;
-  border-radius: 8px;
-  margin-top: 24px;
-  cursor: pointer; }
+button { width: 100%; height: 40px; background: #6A5ACD; border: none; color: #fff; border-radius: 8px; margin-top: 24px; cursor: pointer; }
 
-.co-header {
-  display: flex;
-  justify-content: center; }
-  .co-header > div {
-    background: #4A408C;
-    border-radius: 14px;
-    text-align: center;
-    width: 90%; }
-    .co-header > div > h1 {
-      color: #fff;
-      padding: 14px 0;
-      border-radius: 14px 14px 0 0; }
-    .co-header > div > div {
-      display: flex;
-      justify-content: space-between;
-      background: #B7B1DC;
-      border-radius: 0 0 10px 10px; }
-      .co-header > div > div > h2 {
-        color: #4A408C;
-        font-weight: 500;
-        border-radius: 10px;
-        width: 33.33%;
-        height: 100%; }
-        .co-header > div > div > h2 > a {
-          padding: 14px 0;
-          color: #4A408C;
-          background: #B7B1DC;
-          border-radius: 10px; }
-      .co-header > div > div h2:nth-child(1) a {
-        background: #fff;
-        border-radius: 0 0 0 10px; }
-      .co-header > div > div h2:nth-child(2) a {
-        background: #B7B1DC; }
-      .co-header > div > div h2:nth-child(3) a {
-        background: #B7B1DC;
-        border-radius: 0 0 10px 0; }
+.co-header { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+.co-header > div { background: #4A408C; border-radius: 14px; text-align: center; width: 90%; }
+.co-header > div > h1 { color: #fff; padding: 14px 0; border-radius: 14px 14px 0 0; }
+.co-header > div > div { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; background: #B7B1DC; border-radius: 0 0 10px 10px; }
+.co-header > div > div > h2 { color: #4A408C; font-weight: 500; border-radius: 10px; width: 33.33%; height: 100%; }
+.co-header > div > div > h2 > a { padding: 14px 0; color: #4A408C; background: #B7B1DC; border-radius: 10px; }
+.co-header > div > div h2:nth-child(1) a { background: #fff; border-radius: 0 0 0 10px; }
+.co-header > div > div h2:nth-child(2) a { background: #B7B1DC; }
+.co-header > div > div h2:nth-child(3) a { background: #B7B1DC; border-radius: 0 0 10px 0; }
 
-.co_default {
-  background: #fff;
-  border-radius: 14px; }
-  .co_default table {
-    border-collapse: collapse;
-    width: 100%; }
-    .co_default table tr {
-      display: flex; }
-      .co_default table tr td {
-        flex: 1;
-        border-bottom: 2px solid #E6E4F0;
-        border-right: 2px solid #E6E4F0;
-        padding: 8px 14px; }
-      .co_default table tr td:last-child {
-        flex: 2;
-        border-right: none; }
+.co_default { background: #fff; border-radius: 14px; }
+.co_default table { border-collapse: collapse; width: 100%; }
+.co_default table tr { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.co_default table tr td { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; border-bottom: 2px solid #E6E4F0; border-right: 2px solid #E6E4F0; padding: 8px 14px; }
+.co_default table tr td:last-child { -webkit-box-flex: 2; -ms-flex: 2; flex: 2; border-right: none; }
 
-.content:nth-child(2) > section:nth-child(2) article {
-  background: none; }
-  .content:nth-child(2) > section:nth-child(2) article table {
-    width: 100%; }
-    .content:nth-child(2) > section:nth-child(2) article table tr td {
-      padding: 6px 0;
-      border-top: 1px solid #E6E4F0; }
+.content:nth-child(2) > section:nth-child(2) article { background: none; }
+.content:nth-child(2) > section:nth-child(2) article table { width: 100%; }
+.content:nth-child(2) > section:nth-child(2) article table tr td { padding: 6px 0; border-top: 1px solid #E6E4F0; }
 
-.content > textarea {
-  width: 100%;
-  border: 1px solid #ccc; }
+.content > textarea { width: 100%; border: 1px solid #ccc; }
 
-.co_tabBtn {
-  text-align: center;
-  display: flex;
-  justify-content: space-around;
-  background: #fff;
-  width: 90%;
-  margin: 0 auto;
-  border-radius: 8px 8px 0 0; }
-  .co_tabBtn > h2 {
-    width: 100%; }
-    .co_tabBtn > h2 > a {
-      font-weight: 500;
-      display: block;
-      width: 100%;
-      padding: 12px 0;
-      border-right: 3px solid #E6E4F0; }
-  .co_tabBtn :last-child > a {
-    border: none; }
+.co_tabBtn { text-align: center; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-pack: distribute; justify-content: space-around; background: #fff; width: 90%; margin: 0 auto; border-radius: 8px 8px 0 0; }
+.co_tabBtn > h2 { width: 100%; }
+.co_tabBtn > h2 > a { font-weight: 500; display: block; width: 100%; padding: 12px 0; border-right: 3px solid #E6E4F0; }
+.co_tabBtn :last-child > a { border: none; }
 
-.co_tabContent {
-  margin-top: .5rem;
-  background: #fff;
-  border-radius: 0 0 14px 14px; }
-  .co_tabContent table {
-    border-collapse: collapse;
-    width: 100%; }
-    .co_tabContent table tr {
-      display: flex; }
-      .co_tabContent table tr td {
-        flex: .2;
-        border-bottom: 2px solid #E6E4F0;
-        border-right: 2px solid #E6E4F0;
-        padding: 8px 14px; }
-      .co_tabContent table tr td:nth-child(2) {
-        flex: 1; }
-      .co_tabContent table tr td:last-child {
-        flex: 1;
-        border-right: none; }
+.co_tabContent { margin-top: .5rem; background: #fff; border-radius: 0 0 14px 14px; }
+.co_tabContent table { border-collapse: collapse; width: 100%; }
+.co_tabContent table tr { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.co_tabContent table tr td { -webkit-box-flex: .2; -ms-flex: .2; flex: .2; border-bottom: 2px solid #E6E4F0; border-right: 2px solid #E6E4F0; padding: 8px 14px; }
+.co_tabContent table tr td:nth-child(2) { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
+.co_tabContent table tr td:last-child { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; border-right: none; }
 
-.popup {
-  overflow-y: auto;
-  padding: 2rem;
-  border-radius: 8px;
-  width: 96%;
-  position: fixed;
-  z-index: 10;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 98%;
-  background: #fff; }
-  @media (min-width: 800px) {
-    .popup {
-      max-width: 760px; } }
-  .popup input, .popup select, .popup table, .popup textarea {
-    width: 100%;
-    height: 40px; }
-  .popup h1 {
-    padding: 1rem 0; }
-  .popup h2 {
-    padding: 24px 0 14px; }
-  .popup select {
-    margin: 6px 0;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    position: relative; }
-  .popup > button {
-    width: auto;
-    margin: 0;
-    padding: 0;
-    background: none;
-    position: absolute;
-    right: 10px;
-    top: 10px; }
-    .popup > button > i {
-      color: #888;
-      font-size: 1.4rem; }
-  .popup table {
-    border-bottom: 1px solid #ccc; }
-    .popup table tr td {
-      width: 20%;
-      border-top: 1px solid #ccc; }
-      .popup table tr td input {
-        background: #f5f5f5;
-        border: none;
-        margin: 6px 0;
-        padding-left: 8px; }
-    .popup table tr .divsion {
-      width: 1%; }
-    .popup table tr td:last-child {
-      border-right: none; }
-    .popup table tr .tableTh {
-      text-align: center; }
-  .popup textarea {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    height: 200px; }
-  .popup div {
-    display: flex; }
-    .popup div button:not(:last-child) {
-      margin-right: 8px;
-      background: #aaa; }
+.popup { overflow-y: auto; padding: 2rem; border-radius: 8px; width: 96%; position: fixed; z-index: 10; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); height: 98%; background: #fff; }
+@media (min-width: 800px) { .popup { max-width: 760px; } }
+.popup input, .popup select, .popup table, .popup textarea { width: 100%; height: 40px; }
+.popup h1 { padding: 1rem 0; }
+.popup h2 { padding: 24px 0 14px; }
+.popup select { margin: 6px 0; border-radius: 6px; border: 1px solid #ccc; position: relative; }
+.popup > button { width: auto; margin: 0; padding: 0; background: none; position: absolute; right: 10px; top: 10px; }
+.popup > button > i { color: #888; font-size: 1.4rem; }
+.popup table { border-bottom: 1px solid #ccc; }
+.popup table tr td { width: 20%; border-top: 1px solid #ccc; }
+.popup table tr td input { background: #f5f5f5; border: none; margin: 6px 0; padding-left: 8px; }
+.popup table tr .divsion { width: 1%; }
+.popup table tr td:last-child { border-right: none; }
+.popup table tr .tableTh { text-align: center; }
+.popup textarea { border: 1px solid #ccc; border-radius: 4px; height: 200px; }
+.popup div { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.popup div button:not(:last-child) { margin-right: 8px; background: #aaa; }
 
-.popupBg {
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 9;
-  width: 100%;
-  height: 100%;
-  background: #111;
-  opacity: .5; }
+.popupBg { position: fixed; left: 0; top: 0; z-index: 9; width: 100%; height: 100%; background: #111; opacity: .5; }
 
 /*# sourceMappingURL=company-info.css.map */
