--- a/assets/company.scss
+++ b/assets/company.scss
@@ -79,9 +79,9 @@ hr {border: none; height: 1px;background: #ccc; margin: 14px 0;}
       }
       section {
         article {
-          background: #eee;
+          background: #fff;
           margin: 24px 0;
-          padding: 18px;
+           overflow: hidden;
         }
       }
       :nth-child(3) {
@@ -101,4 +101,9 @@ hr {border: none; height: 1px;background: #ccc; margin: 14px 0;}
 footer {
   height: 4rem;
   margin-bottom: 4rem;
+}
+
+#chartContainer {
+  width: 100%;
+  height: 370px;
 }
