--- a/assets/diary.css
+++ b/assets/diary.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 #calendar { width: 90%; margin: 0 auto; }
 
 body { margin: 0 !important; }
@@ -33,5 +34,8 @@ header, .aside { top: 0; }
 .top { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
 #calendar h3 { font-weight: 400; font-size: 1.55rem; }
+
+.calendar table tbody tr td { position: relative; }
+.calendar table tbody tr td:after { position: absolute; right: 6px; bottom: 6px; content: '●'; font-size: 10px; color: tomato; }
 
 /*# sourceMappingURL=diary.css.map */
