--- a/assets/sub.scss
+++ b/assets/sub.scss
@@ -90,7 +90,7 @@ body {
             }
         }
     }
-    > section:nth-child(3) {
+    > section:nth-child(3).tableDefault {
         // background: #fff;
         margin-top: 20px;
         padding-bottom: 14px;
