--- a/assets/diary.css
+++ b/assets/diary.css
@@ -47,6 +47,6 @@ header, .aside { top: 0; }
 .tableDefault > table tr:last-child > td, .tableDefault > table tr:last-child > th { border-bottom: 1px solid #ccc; }
 .tableDefault > table:last-child tr td:last-child { text-align: right; padding-right: 4px; letter-spacing: .2px; font-weight: 400; font-size: 12px; }
 
-.popupBg { position: fixed; left: 50%; top: 50%; z-index: 9; width: 100%; height: 100%; background: #111; opacity: .5; }
+.popupBg { left: 50%; top: 50%; }
 
 /*# sourceMappingURL=diary.css.map */
