--- a/assets/company-info.scss
+++ b/assets/company-info.scss
@@ -213,6 +213,10 @@ select {
          background: #f5f5f5; border: none; margin:6px 0;
          padding-left: 8px;
        }
+       select {
+         display: inline-block;
+         background: #f5f5f5;
+       }
      }
      .divsion {
        width: 1%;
