--- a/assets/company-info.scss
+++ b/assets/company-info.scss
@@ -215,7 +215,7 @@ select {
        }
        select {
          display: inline-block;
-         background: #f5f5f5;
+         background: #f5f5f5 !important;
        }
      }
      .divsion {
