--- a/assets/diary.scss
+++ b/assets/diary.scss
@@ -48,7 +48,8 @@ header, .aside {top: 0;}
 }
 
 .tableDefault {
-    // background: #fff;
+    background: #fff;
+    border: 1px solid red;
     margin-top: 20px;
     padding-bottom: 14px;
     border-radius: 14px;
