--- a/assets/company-info.scss
+++ b/assets/company-info.scss
@@ -191,6 +191,8 @@ select {
   border-radius: 6px;
   border: 1px solid #ccc;
   position: relative;
+  background: #f5f5f5; border: none;
+
 }
 
 > button {
