--- a/assets/header.css
+++ b/assets/header.css
@@ -1,56 +1,16 @@
-header {
-  background: #fff;
-  position: fixed;
-  z-index: 2;
-  left: 50%;
-  transform: translate(-50%);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 14px;
-  border-bottom: 1px solid #eee;
-  width: 800px; }
-  @media (max-width: 800px) {
-    header {
-      width: 100%; } }
+header { background: #fff; position: fixed; z-index: 2; left: 50%; -webkit-transform: translate(-50%); transform: translate(-50%); display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; padding: 14px; border-bottom: 1px solid #eee; width: 800px; }
+@media (max-width: 800px) { header { width: 100%; } }
 
-.moveLeft-class {
-  transform: translateX(-200px); }
+.moveLeft-class { -webkit-transform: translateX(-200px); transform: translateX(-200px); }
 
-.aside {
-  background: #fff;
-  height: 100%;
-  width: 200px;
-  position: fixed;
-  z-index: 5;
-  right: -200px;
-  transition: transform .4s ease-in-out; }
-  .aside > i {
-    position: absolute;
-    right: 14px;
-    top: 14px; }
-  .aside > ul > li {
-    border-top: 1px solid #eee; }
-    .aside > ul > li > a {
-      padding: 14px 0 14px 14px;
-      transition: .5s; }
-    .aside > ul > li :hover {
-      background: #eee; }
-  .aside > ul > :first-child {
-    margin-top: 5rem; }
-  .aside > ul > :last-child {
-    border-bottom: 1px solid #eee; }
+.aside { background: #fff; height: 100%; width: 200px; position: fixed; z-index: 5; right: -200px; -webkit-transition: -webkit-transform .4s ease-in-out; transition: -webkit-transform .4s ease-in-out; transition: transform .4s ease-in-out; transition: transform .4s ease-in-out, -webkit-transform .4s ease-in-out; }
+.aside > i { position: absolute; right: 14px; top: 14px; }
+.aside > ul > li { border-top: 1px solid #eee; }
+.aside > ul > li > a { padding: 14px 0 14px 14px; -webkit-transition: .5s; transition: .5s; }
+.aside > ul > li :hover { background: #eee; }
+.aside > ul > :first-child { margin-top: 5rem; }
+.aside > ul > :last-child { border-bottom: 1px solid #eee; }
 
-.asideBg {
-  display: none;
-  position: fixed;
-  z-index: 4;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #111;
-  opacity: .5;
-  transition-delay: 2s; }
+.asideBg { display: none; position: fixed; z-index: 4; left: 0; top: 0; width: 100%; height: 100%; background: #111; opacity: .5; -webkit-transition-delay: 2s; transition-delay: 2s; }
 
 /*# sourceMappingURL=header.css.map */
