--- a/assets/diary.scss
+++ b/assets/diary.scss
@@ -49,7 +49,8 @@ header, .aside {top: 0;}
 
 .tableDefault {
     background: #fff;
-    border: 1px solid red;
+    width: 90%;
+    margin: 0 auto;
     margin-top: 20px;
     padding-bottom: 14px;
     border-radius: 14px;
@@ -68,6 +69,9 @@ header, .aside {top: 0;}
             > th, > td {
                 border-top: 1px solid #ccc; font-size: 14px;
                 padding: 8px 10px;
+                height: 38px; overflow: hidden;
+                text-align: left;
+                
             }
             > th {font-weight: 500; letter-spacing: .5px;}
         }
