--- a/assets/sub.scss
+++ b/assets/sub.scss
@@ -91,7 +91,7 @@ body {
         }
     }
     > section:nth-child(3).tableDefault {
-        // background: #fff;
+        background: #fff;
         margin-top: 20px;
         padding-bottom: 14px;
         border-radius: 14px;
@@ -110,6 +110,8 @@ body {
                 > th, > td {
                     border-top: 1px solid #ccc; font-size: 14px;
                     padding: 8px 10px;
+                    overflow: hidden;
+                    text-align: left !important;
                 }
                 > th {font-weight: 500; letter-spacing: .5px;}
             }
