--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ a { text-decoration: none; display: block; }
 
 a:hover { color: var(--main); }
 
-a:visited { color: #333; }
+a:visited, a:active { color: #333; }
 
 :root { --main: #648FFF; --sub1: #8C64FF; --sub2: #FF6464; }
 
