--- a/assets/slickCustom.scss
+++ b/assets/slickCustom.scss
@@ -1,8 +1,8 @@
 .slider {
   border: 1px solid red;
-    width: 50%;
-    margin: 100px auto;
-    height: 400px;
+    width: 100%;
+    margin: 20px auto;
+    // height: 400px;
 }
 
 .slick-slide {
@@ -18,7 +18,7 @@
 .slick-prev:before,
 .slick-next:before {
   color: black;
-  border: 1px solid red;
+  border: 10px solid red;
 }
 
 
@@ -36,4 +36,8 @@
 .slick-current {
   opacity: 1;
   border: 1px solid red;
+}
+
+.co_wrapper > article > .content :nth-child(3) > button {
+  background:transparent;
 }
