--- a/assets/slick/slick-theme.scss
+++ b/assets/slick/slick-theme.scss
@@ -62,7 +62,7 @@ $slick-opacity-not-active: 0.25 !default;
 
 .slick-prev,
 .slick-next {
-    position: absolute;
+    position: absolute; z-index: 999;
     display: block;
     height: 20px;
     width: 20px;
@@ -140,7 +140,7 @@ $slick-opacity-not-active: 0.25 !default;
     list-style: none;
     display: block;
     text-align: center;
-    padding: 0;
+    padding: 1rem;
     margin: 0;
     width: 100%;
     li {
