--- a/assets/slickCustom.css
+++ b/assets/slickCustom.css
@@ -1,17 +1,19 @@
-.slider { border: 1px solid red; width: 100%; margin: 20px auto; }
+.slider { width: 100%; margin: 20px auto; }
 
-.slick-slide { border: 1px solid red; margin: 0px 20px; height: 100%; }
+.slick-slide { height: 300px; }
 
-.slick-slide img { width: 100%; }
+.slick-slide img { width: 100%; background: #eee; height: 100%; }
 
-.slick-prev:before, .slick-next:before { color: black; border: 10px solid red; }
+.slick-prev:before, .slick-next:before { color: black; padding: 0 1rem; }
 
-.slick-slide { -webkit-transition: all ease-in-out .3s; transition: all ease-in-out .3s; opacity: .2; border: 1px solid red; }
+.slick-slide { -webkit-transition: all ease-in-out .3s; transition: all ease-in-out .3s; opacity: .2; }
 
-.slick-active { opacity: .5; border: 1px solid red; }
+.slick-active { opacity: .5; }
 
-.slick-current { opacity: 1; border: 1px solid red; }
+.slick-current { opacity: 1; }
 
 .co_wrapper > article > .content :nth-child(3) > button { background: transparent; }
+
+.co_wrapper > article > .content :nth-child(3) > button { width: auto; }
 
 /*# sourceMappingURL=slickCustom.css.map */
