--- a/assets/slickCustom.css
+++ b/assets/slickCustom.css
@@ -1,4 +1,4 @@
-.slider { width: 100%; margin: 20px auto; }
+.slider { width: 100%; margin: 20px auto 6px !important; }
 
 .slick-slide img { width: 100%; background: #eee; border-radius: 4px !important; }
 
@@ -15,5 +15,7 @@
 .co_wrapper > article > .content :nth-child(3) > button { width: auto; }
 
 button { margin-top: 0; }
+
+.co_wrapper > article > .content :nth-child(3) > button { padding: 0 1rem; }
 
 /*# sourceMappingURL=slickCustom.css.map */
