--- a/assets/header.scss
+++ b/assets/header.scss
@@ -5,7 +5,7 @@ header {
    display: flex;
    align-items: center;
    justify-content: space-between;
-   padding: 14px;
+   padding: 10px 14px;
    border-bottom: 1px solid #eee;
    width: 800px;
    @media(max-width: 800px) {
