--- a/assets/water-quality.scss
+++ b/assets/water-quality.scss
@@ -1,4 +1,8 @@
-.co-header {
+
+.co-header > div {
+  background: #E6E4F0 !important;
+}
+.quality-tabWrapper {
   margin: 1rem 0;
 }
 .quality-tabWrapper {
@@ -15,4 +19,19 @@
 
 .select {
   margin-bottom: 1rem;
+}
+.update {
+  height: auto;
+}
+.headBar {
+  > td {
+    border-top: 2px solid #aaa !important;
+  }
+}
+.resultPic {
+
+  img {
+    width: 100px;
+  }
+
 }
