--- a/assets/header.scss
+++ b/assets/header.scss
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: 'GmarketSansMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 header {
    background: #fff;
    position: fixed;z-index: 2; left: 50%;
@@ -12,6 +18,7 @@ header {
       width: 100%;
    }
 }
+.navTitle {font-weight:600;font-family: 'GmarketSansMedium';}
 .moveLeft-class {
    transform: translateX(-200px);
 }
