--- a/assets/slickCustom.css
+++ b/assets/slickCustom.css
@@ -1,21 +1,37 @@
-.slider { width: 100%; margin: 20px auto 6px !important; }
+.slider {
+  width: 100%;
+  margin: 20px auto 6px !important; }
 
-.slick-slide img { width: 100%; background: #eee; border-radius: 4px !important; }
+.slick-slide img {
+  width: 100%;
+  background: #eee;
+  border-radius: 4px !important; }
 
-.slick-prev:before, .slick-next:before { color: black; padding: 0 1rem; }
+.slick-prev:before,
+.slick-next:before {
+  color: black;
+  padding: 0 1rem; }
 
-.slick-slide { -webkit-transition: all ease-in-out .3s; transition: all ease-in-out .3s; opacity: .2; }
+.slick-slide {
+  transition: all ease-in-out .3s;
+  opacity: .2; }
 
-.slick-active { opacity: .5; }
+.slick-active {
+  opacity: .5; }
 
-.slick-current { opacity: 1; }
+.slick-current {
+  opacity: 1; }
 
-.co_wrapper > article > .content :nth-child(3) > button { background: transparent; }
+.co_wrapper > article > .content :nth-child(3) > button {
+  background: transparent; }
 
-.co_wrapper > article > .content :nth-child(3) > button { width: auto; }
+.co_wrapper > article > .content :nth-child(3) > button {
+  width: auto; }
 
-button { margin-top: 0; }
+button {
+  margin-top: 0; }
 
-.co_wrapper > article > .content :nth-child(3) > button { padding: 0 1rem; }
+.co_wrapper > article > .content :nth-child(3) > button {
+  padding: 0 1rem; }
 
 /*# sourceMappingURL=slickCustom.css.map */
