--- a/assets/style.css
+++ b/assets/style.css
@@ -2,50 +2,171 @@
 /* 초기화 */
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 @import url("header.css");
-* { -webkit-box-sizing: border-box; box-sizing: border-box; font-size: 16px; }
+@font-face {
+  font-family: 'GmarketSansMedium';
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
+* {
+  box-sizing: border-box;
+  font-size: 16px; }
 
-body { margin: 0; font-family: 'Noto Sans KR', sans-serif; letter-spacing: -.5px; }
+body {
+  margin: 0;
+  font-family: 'Noto Sans KR', sans-serif;
+  letter-spacing: -.5px; }
 
-ul { list-style: none; padding: 0; margin: 0; }
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
 
-h1, h2, h3, h4, h5, h6 { margin: 0; }
+h1, h2, h3, h4, h5, h6 {
+  margin: 0; }
 
-a { text-decoration: none; display: block; }
+a {
+  text-decoration: none;
+  display: block; }
 
-a:hover { color: var(--main); }
+a:hover {
+  color: var(--main); }
 
-a:visited, a:active { color: #333; }
+a:visited, a:active {
+  color: #333; }
 
-:root { --main: #648FFF; --sub1: #8C64FF; --sub2: #FF6464; }
+:root {
+  --main: #648FFF;
+  --sub1: #8C64FF;
+  --sub2: #FF6464; }
 
-body { background: #DBE7EE; }
+.navTitle {
+  font-weight: 600;
+  font-family: 'GmarketSansMedium'; }
 
-.container { position: relative; z-index: 1; top: 53px; max-width: 800px; height: 100%; margin: 0 auto; }
-.container > div:first-child { overflow: hidden; border-radius: 0 0 14px 14px; max-width: 800px; height: 200px; }
-.container > div:first-child > img { display: block; width: 100%; height: auto; }
+body {
+  background: #DBE7EE; }
 
-.main { position: absolute; z-index: 2; top: 34px; padding-bottom: 80px; left: 50%; -webkit-transform: translate(-50%); transform: translate(-50%); height: auto; width: 88%; margin: 0 auto; }
-.main > section:nth-child(1) { display: block; width: 100%; height: 36px; border-radius: 18px; background: #fff; margin-bottom: 20px; }
-.main > section:nth-child(1) > p { display: inline-block; text-align: center; font-size: 14px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
-.main > section:nth-child(1) > p > span { font-size: 13px; letter-spacing: .5px; margin-top: 8px; padding: 0 .5rem; }
-.main > section:nth-child(1) > p > span:nth-child(2) { color: #ccc; }
-.main > section:nth-child(2) { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; }
-.main > section:nth-child(2) > a:nth-child(1) { margin-right: .4em; }
-.main > section:nth-child(2) > a:nth-child(2) { margin-right: .4em; display: none; }
-.main > section:nth-child(2) > a:nth-child(3) { margin-left: .4em; display: none; }
-.main > section:nth-child(2) > a:nth-child(4) { margin-left: .4em; }
-.main > section:nth-child(2) > a { border-radius: 14px; background: #fff; width: 100%; height: 153px; text-align: center; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; padding: 14px 0; }
-.main > section:nth-child(2) > a > hr { display: inline-block; width: 70%; padding: 0; height: 1px; border: none; background: #eee; }
-.main > section:nth-child(2) > a > p { font-size: 14px; margin: 0; }
-.main > section:nth-child(2) > a > p > img { height: 53px; padding: 4px 0; }
-.main > section:nth-child(3) { background: #fff; margin-top: 20px; padding-bottom: 14px; border-radius: 14px; height: auto; }
-.main > section:nth-child(3) > h1:first-child { color: var(--sub1); }
-.main > section:nth-child(3) > h1, .main > section:nth-child(3) h2 { display: block; font-size: 16px; text-align: center; padding-top: 18px; }
-.main > section:nth-child(3) h2 { background: var(--sub2); margin: 20px 5% 0; padding: 6px 0; color: #fff; font-size: 14px; font-weight: 400; letter-spacing: .5px; border-radius: 10px 10px 0 0; }
-.main > section:nth-child(3) > table { padding: 5%; width: 100%; }
-.main > section:nth-child(3) > table tr > th, .main > section:nth-child(3) > table tr > td { border-top: 1px solid #eee; font-size: 14px; padding: 8px 10px; }
-.main > section:nth-child(3) > table tr > th { font-weight: 500; letter-spacing: .5px; }
-.main > section:nth-child(3) > table tr:last-child > td, .main > section:nth-child(3) > table tr:last-child > th { border-bottom: 1px solid #eee; }
-.main > section:nth-child(3) > table:last-child tr td:last-child { text-align: right; padding-right: 4px; letter-spacing: .2px; font-weight: 400; font-size: 12px; }
+.container {
+  position: relative;
+  z-index: 1;
+  top: 53px;
+  max-width: 800px;
+  height: 100%;
+  margin: 0 auto; }
+  .container > div:first-child {
+    overflow: hidden;
+    border-radius: 0 0 14px 14px;
+    max-width: 800px;
+    height: 200px; }
+    .container > div:first-child > img {
+      display: block;
+      width: 100%;
+      height: auto; }
+
+.main {
+  position: absolute;
+  z-index: 2;
+  top: 34px;
+  padding-bottom: 80px;
+  left: 50%;
+  transform: translate(-50%);
+  height: auto;
+  width: 88%;
+  margin: 0 auto; }
+  .main > section:nth-child(1) {
+    display: block;
+    width: 100%;
+    height: 36px;
+    border-radius: 18px;
+    background: #fff;
+    margin-bottom: 20px; }
+    .main > section:nth-child(1) > p {
+      display: inline-block;
+      text-align: center;
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+      .main > section:nth-child(1) > p > span {
+        font-size: 13px;
+        letter-spacing: .5px;
+        margin-top: 8px;
+        padding: 0 .5rem; }
+      .main > section:nth-child(1) > p > span:nth-child(2) {
+        color: #ccc; }
+  .main > section:nth-child(2) {
+    display: flex;
+    width: 100%; }
+    .main > section:nth-child(2) > a:nth-child(1) {
+      margin-right: .4em; }
+    .main > section:nth-child(2) > a:nth-child(2) {
+      margin-right: .4em;
+      display: none; }
+    .main > section:nth-child(2) > a:nth-child(3) {
+      margin-left: .4em;
+      display: none; }
+    .main > section:nth-child(2) > a:nth-child(4) {
+      margin-left: .4em; }
+    .main > section:nth-child(2) > a {
+      border-radius: 14px;
+      background: #fff;
+      width: 100%;
+      height: 153px;
+      text-align: center;
+      flex: 1;
+      padding: 14px 0; }
+      .main > section:nth-child(2) > a > hr {
+        display: inline-block;
+        width: 70%;
+        padding: 0;
+        height: 1px;
+        border: none;
+        background: #eee; }
+      .main > section:nth-child(2) > a > p {
+        font-size: 14px;
+        margin: 0; }
+        .main > section:nth-child(2) > a > p > img {
+          height: 53px;
+          padding: 4px 0; }
+  .main > section:nth-child(3) {
+    background: #fff;
+    margin-top: 20px;
+    padding-bottom: 14px;
+    border-radius: 14px;
+    height: auto; }
+    .main > section:nth-child(3) > h1:first-child {
+      color: var(--sub1); }
+    .main > section:nth-child(3) > h1, .main > section:nth-child(3) h2 {
+      display: block;
+      font-size: 16px;
+      text-align: center;
+      padding-top: 18px; }
+    .main > section:nth-child(3) h2 {
+      background: var(--sub2);
+      margin: 20px 5% 0;
+      padding: 6px 0;
+      color: #fff;
+      font-size: 14px;
+      font-weight: 400;
+      letter-spacing: .5px;
+      border-radius: 10px 10px 0 0; }
+    .main > section:nth-child(3) > table {
+      padding: 5%;
+      width: 100%; }
+      .main > section:nth-child(3) > table tr > th, .main > section:nth-child(3) > table tr > td {
+        border-top: 1px solid #eee;
+        font-size: 14px;
+        padding: 8px 10px; }
+      .main > section:nth-child(3) > table tr > th {
+        font-weight: 500;
+        letter-spacing: .5px; }
+      .main > section:nth-child(3) > table tr:last-child > td, .main > section:nth-child(3) > table tr:last-child > th {
+        border-bottom: 1px solid #eee; }
+    .main > section:nth-child(3) > table:last-child tr td:last-child {
+      text-align: right;
+      padding-right: 4px;
+      letter-spacing: .2px;
+      font-weight: 400;
+      font-size: 12px; }
 
 /*# sourceMappingURL=style.css.map */
