--- a/assets/sub.scss
+++ b/assets/sub.scss
@@ -12,7 +12,7 @@ a {text-decoration: none; display: block;} a:hover {color:var(--main)} a:visited
     --sub2 : #FF6464;
 }
 body {
-    background: #eee;
+    background: #DBE7EE;
 }
 @import url('header.css');
 .container {
