--- a/assets/sub.css
+++ b/assets/sub.css
@@ -18,7 +18,7 @@ a:visited { color: #333; }
 
 :root { --main: #648FFF; --sub1: #8C64FF; --sub2: #FF6464; }
 
-body { background: #eee; }
+body { background: #DBE7EE; }
 
 .container { position: relative; z-index: 1; top: 53px; max-width: 800px; height: 100%; margin: 0 auto; }
 .container > div:first-child { overflow: hidden; border-radius: 0 0 14px 14px; max-width: 800px; height: 200px; }
