--- a/assets/company-info.css
+++ b/assets/company-info.css
@@ -57,4 +57,8 @@ button { width: 100%; height: 40px; background: #6A5ACD; border: none; color: #f
 
 .popupBg { position: fixed; left: 0; top: 0; z-index: 9; width: 100%; height: 100%; background: #111; opacity: .5; }
 
+.imgAttach { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
+.imgAttach input { font-size: 14px; padding: .4rem 0; }
+.imgAttach input:last-child { margin-bottom: 1rem; }
+
 /*# sourceMappingURL=company-info.css.map */
