--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,8 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 @import url("header.css");
 @font-face { font-family: 'GmarketSansMedium'; src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff") format("woff"); font-weight: normal; font-style: normal; }
+.height { height: 56px; }
+
 * { -webkit-box-sizing: border-box; box-sizing: border-box; font-size: 16px; }
 
 body { margin: 0; font-family: 'Noto Sans KR', sans-serif; letter-spacing: -.5px; }
