--- a/assets/style.scss
+++ b/assets/style.scss
@@ -8,6 +8,10 @@
     font-weight: normal;
     font-style: normal;
 }
+// ↓↓↓↓ 헤더윗부분 여백제거 ↓↓↓↓  주석처리해두면 윗공간 사라집니다....
+.height {height: 56px;}
+
+
 * {box-sizing: border-box; font-size: 16px;}
 body {margin:0; font-family: 'Noto Sans KR', sans-serif; letter-spacing: -.5px;}
 ul {list-style: none; padding: 0; margin:0;}
