--- a/assets/acc.css
+++ b/assets/acc.css
@@ -5,8 +5,10 @@
 .accTab h2:not(:last-child) { margin-right: 10px; }
 
 .accTxt { border-radius: 8px; margin: 1rem auto; padding: 1rem; width: 90%; background: #fff; }
-.accTxt .accBar { display: -webkit-box; display: -ms-flexbox; display: flex; }
-.accTxt .accBar p { margin: 4px 0; overflow: hidden; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
-.accTxt .accBar p a:hover { text-decoration: underline; }
+.accTxt .accBar:first-child { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.accTxt .accBar:first-child p { margin: 4px 0; overflow: hidden; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
+.accTxt .accBar:first-child p a:hover { text-decoration: underline; }
+
+.accTxtView { background: #f5f5f5; width: 100%; padding: 1rem; margin-bottom: 0; border-radius: 4px; }
 
 /*# sourceMappingURL=acc.css.map */
