--- a/assets/style.scss
+++ b/assets/style.scss
@@ -8,7 +8,7 @@
     font-weight: normal;
     font-style: normal;
 }
-// ↓↓↓↓ 헤더윗부분 여백제거 ↓↓↓↓  주석처리해두면 윗공간 사라집니다....
+// ↓↓↓↓ 헤더윗부분 여백제거 ↓↓↓↓  주석처리 시 윗공간 사라집니다....
 .height {height: 56px;}
 
 
