--- a/assets/style.css
+++ b/assets/style.css
@@ -55,4 +55,7 @@ body { background: #DBE7EE; }
 .main > section:nth-child(3) > table tr:last-child > td, .main > section:nth-child(3) > table tr:last-child > th { border-bottom: 1px solid #eee; }
 .main > section:nth-child(3) > table:last-child tr td:last-child { text-align: right; padding-right: 4px; letter-spacing: .2px; font-weight: 400; font-size: 12px; }
 
+.chatbot { position: fixed; z-index: 4; right: 1rem; bottom: 1rem; width: 50px; padding: 8px; height: 50px; border-radius: 50%; background: #fff; cursor: pointer; -webkit-box-shadow: 0 0 14px rgba(50, 50, 50, 0.3); box-shadow: 0 0 14px rgba(50, 50, 50, 0.3); }
+.chatbot img { width: 100%; }
+
 /*# sourceMappingURL=style.css.map */
