--- a/assets/style.scss
+++ b/assets/style.scss
@@ -154,3 +154,16 @@ body {
         }
     }
 }
+
+.chatbot {
+  position: fixed;z-index: 4;
+  right: 1rem; bottom: 1rem;
+  width: 50px; padding: 8px;
+  height: 50px;
+  border-radius: 50%;
+  background: #fff; cursor: pointer;
+  box-shadow: 0 0 14px rgba(50, 50, 50, .3);
+  img {
+    width: 100%;
+  }
+}
